# infotecs_test_task

./: .gitignore  CMakeLists.txt  Launch.md  README.md
src/: CMakeLists.txt
src/Client/: CMakeLists.txt  IClient.hpp  client.cpp  client.hpp  main.cpp
src/LIB/: CMakeLists.txt  task_lib.cpp  task_lib.hpp
src/Server/: CMakeLists.txt  IServer.hpp  main.cpp  server.cpp  server.hpp
